<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <io.github.florent37.shapeofview.shapes.DiagonalView
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:elevation="4dp"
            app:shape_diagonal_angle="10"
            app:shape_diagonal_position="bottom">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/orange"/>

            <ImageView
                android:layout_width="220dp"
                android:layout_height="180dp"
                android:src="@drawable/opticdev_gray"
                android:layout_gravity="center|top"
                android:contentDescription="@string/imagenlogo" />

        </io.github.florent37.shapeofview.shapes.DiagonalView>



           <!-- Correo -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="70dp"
            android:gravity="center">
            
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/email_ic"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/email" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/correologin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/correo_electronico"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <!-- Contraseña -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="5dp"
            android:gravity="center">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/lock_ic"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/lock" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/contraseñalogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/contrase_a"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
        <!-- boton -->

        <Button
            android:id="@+id/btnlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/iniciar_sesion"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="@color/orange"/>


    </LinearLayout>

    <!-- Palabras de abajo -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="bottom"
        android:layout_marginBottom="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_tienes_cuenta"
            android:textSize="17sp"/>
        <TextView
            android:id="@+id/textViewRegistrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registrate_aqui"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_marginStart="5dp"/>
    </LinearLayout>



</androidx.coordinatorlayout.widget.CoordinatorLayout>