<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrarseActivity">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- membrete -->

        <io.github.florent37.shapeofview.shapes.ArcView
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:elevation="4dp"
            app:shape_arc_height="20dp"
            app:shape_arc_position="bottom"
            >

            <!-- YOUR CONTENT -->
            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/orange"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registrate_ahora"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_marginTop="20dp"/>
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/person_ic"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:contentDescription="personaMembrete" />

        </io.github.florent37.shapeofview.shapes.ArcView>

        <!-- nombre de usuario -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="40dp"
            android:gravity="center">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/personpin2_ic"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/lock" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/UsuarioNombreRegistro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Nombre de Usuario"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
        <!-- FIN nombre de usuario -->
        <!--  correo de usuario -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="5dp"
            android:gravity="center">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/email_ic"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/lock" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/CorreoRegistro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/correo_eletronico"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
        <!-- FIN correo de usuario -->
        <!-- contraseña de usuario -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="5dp"
            android:gravity="center">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/lock_ic"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/lock" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ContraseñaRegistro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/contrase_a"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
        <!-- FIN contraseña de usuario -->
        <!-- confirmar contraseña -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="5dp"
            android:gravity="center">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/baseline_lock_open_24"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/lock" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ConfirmarContraseñaRegistro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirmar_contrase_a"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
        <!-- FIN Confirmar contraseña -->

    </LinearLayout>

    <!-- boton -->

    <Button
        android:id="@+id/btnRegistrarse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="REGISTRARSE"
        android:layout_gravity="bottom"
        android:backgroundTint="@color/orange"
        android:layout_margin="20dp"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circuloatras"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/flechaatras"
        app:civ_circle_background_color="@color/white"
        android:layout_margin="15dp"/>




</androidx.coordinatorlayout.widget.CoordinatorLayout>